--- a/app/backdrop/style.css
+++ b/app/backdrop/style.css
@@ -20,23 +20,25 @@
 }
 
 .aurora .backdrop {
-	background-color: #323292;
 }
 
 .backdrop.west-side .parallax {
+	background-color: #323292;
 	/*background: linear-gradient(0deg, rgba(10,194,133,1) 40%, rgba(0,114,255,1) 100%);*/
-	/*background-color: #323292;*/
 	background-color: #1e1659;
 	/*filter: blur(0.5px);*/
 	transform: translateZ(0px);
 }
 
 .backdrop.west-side-cloudy {
-	background-color: #12173c;
 	filter: blur(0.5px);
 }
 
-.backdrop.west-side-cloudy.lightning {
+.backdrop.west-side-cloudy .parallax {
+	background-color: #12173c;
+}
+
+.backdrop.west-side-cloudy.lightning .parallax {
 	animation: west-side-lightning 1s ease-out infinite forwards;
 }
 
@@ -51,15 +53,9 @@
 	100% { background-color: #12173c; filter: brightness(1) blur(0.5px); }
 }
 
-
 .backdrop.angel-island .parallax {
 	filter: blur(0.0px);
 	background-color: #2424fc;
-}
-
-
-.backdrop {
-	/*filter: blur(1.5px);*/
 }
 
 .backdrop::before {
@@ -77,7 +73,6 @@
 
 .backdrop {
 	pointer-events: none;
-	transition: background-color 0.75s ease-out;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -93,14 +88,18 @@
 }
 
 .backdrops .backdrop .parallax {
-	left: calc(calc(calc(var(--x) + var(--bX)) - var(--xPan)) * 1px);
-	width: calc(calc(var(--width) + var(--xPan)) * 1px);
+	transition: background-color 0.75s ease-out;
+	left: calc(calc(calc(var(--x) + var(--bX))) * 1px);
+	width: calc(calc(var(--width) + var(--xPan) - var(--xPan)) * 1px);
 }
 
 .backdrop.marble-garden {
+	height: 632px;
+}
+
+.backdrop.marble-garden .parallax {
 	background-color: rgba(25,0,75,0.5);
 	background-color: #4848d8;
-	height: 632px;
 }
 
 .backdrop .parallax {
@@ -135,16 +134,18 @@
 	/*background-color: rgba(255, 255,255,1);*/
 	/*background-color: rgba(255,255,255,1);*/
 	/*background-color: rgba(0, 100, 140, 1);*/
-	background-color: rgba(95, 60, 70, 1);
-	background-color: rgba(0, 100, 140, 1);
 
-	transition: background-position-y 1800ms ease-out, background-image 3600ms ease-out;
-
-	background-image: linear-gradient(rgba(95, 60, 70, 1) 50%, rgba(90, 160, 200, 1), rgba(150, 125, 70, 1) 85%);
 
 	background-size: 100% 300%;
-
+	background-color: rgba(0, 100, 140, 1);
+	background-image: linear-gradient(rgba(95, 60, 70, 1) 50%, rgba(90, 160, 200, 1), rgba(150, 125, 70, 1) 85%);
 	background-position-y: calc(50% * calc(2 * var(--sunrise)));
+	transition: background-position-y 1800ms ease-out, background-image 3600ms ease-out;
+	z-index: -1;
+}
+
+.backdrop.industrial .parallax {
+	/*background-color: rgba(95, 60, 70, 1);*/
 }
 
 .backdrop.mystic-cave .parallax,
@@ -154,10 +155,10 @@
 	bottom: max( calc(100% - calc(1px * var(--bottom))), calc(1% * 0));
 }
 
-.backdrop.underground {
+.backdrop.underground .parallax {
 	background-color: #408080;
 }
 
-.backdrop.south-ridge {
+.backdrop.south-ridge .parallax {
 	background-color: #6c90fc;
 }
