--- a/docs/app.css
+++ b/docs/app.css
@@ -1535,9 +1535,19 @@ section.pause-menu li {
 	z-index: 100;
 }
 
-.actor-item.actor-breakable-block.broken .sprite {
-	background-image: none !important;
-	opacity: 0 !important;
+.actor-item.actor-breakable-block:not(.broken) .sprite {
+	background-image: var(--sprite-sheet, url(/Sonic/marble-companion-block.png));
+	background-position-x: calc(var(--sprite-x) * -32px);
+	background-position-y: calc(var(--sprite-y) * -32px);
+}
+
+.actor-item.actor-breakable-block .fragmentsX {
+	display: none;
+}
+.actor-item.actor-breakable-block.broken .fragmentsX,
+.actor-item.actor-breakable-block.breaking .fragmentsX,
+.actor-item.actor-breakable-block.will-break .fragmentsX {
+	display: initial;
 }
 
 .actor-item.actor-breakable-block.broken .fragmentsX {
@@ -1559,7 +1569,7 @@ section.pause-menu li {
 	position: absolute;
 	transition: transform var(--x-speed) ease-out , opacity var(--y-speed) ease-in;
 	transform: translate(var(--xTarget), -0px);
-	/*opacity: 0.5;*/
+	opacity: 0.5;
 	top:  calc(var(--height, 32) * -0.5px);
 	left: 0px;
 	width: calc(var(--width, 32) * 1px);
@@ -4646,14 +4656,100 @@ animation: chalmers-run steps(5) infinite calc(calc(calc(0 - var(--animation-bia
 	left: calc(50% - 4px);
 	background-image: url(/Sonic/chain-link.png);
 	background-position: bottom;
+	transform-origin: bottom center;
+	transform: rotate(calc(1rad * var(--angle, 0)));
 }
 
 
+[data-theme="wood"] .actor-item .chain,
 [data-bg="wood"] .actor-item .chain {
 	background-image: url(/Sonic/rope.png);
 	background-repeat: repeat-y;
 }
 
+.actor-pogo-spring {
+	z-index: -1;
+}
+.actor-item.actor-pogo-spring[data-active="true"] .sprite {
+	position: relative;
+	top: calc(-16px + calc(1px * var(--height)));
+}
+.actor-pogo-spring[data-dead="true"] {
+	z-index: -1;
+	animation: pogo-spring-flicker 0.15s infinite;
+}
+
+.actor-pogo-spring .sprite:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 9px;
+	width: 32px;
+	height: 22px;
+	background-image: url(/Sonic/springs.png);
+	background-position: -16px -35px;
+	transform-origin: 16px 4px;
+	/*animation: pogo-spring-bounce .5s 1 ease-out;*/1
+}
+
+.actor-pogo-spring .sprite:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 32px;
+	height: 32px;
+	background-image: url(/Sonic/springs.png), url(/Sonic/pogo-spring-base.png);
+	background-position: -80px -90px, 0 14px;
+	background-repeat: no-repeat;
+}
+
+.actor-pogo-spring[data-direction="-1"] .sprite:after {
+	transform: scaleX(-1);
+}
+
+.actor-pogo-spring[data-active="true"][data-falling="true"] .sprite:before {
+	transform: scale(1.25, 0.75);
+	background-position: -80px -18px;
+	animation: pogo-spring-bounce .25s 1 ease-out;
+}
+
+.actor-pogo-spring[data-active="true"] .sprite:after {
+	background-image: url(/Sonic/springs.png);
+	background-position: -80px -90px;
+}
+
+.actor-pogo-spring[data-dead="true"] .sprite:after {
+	background-image: url(/Sonic/springs.png);
+	background-position: -80px -90px;
+}
+
+@keyframes pogo-spring-bounce {
+	from {
+		transform: scale(1.25, 1);
+	}
+	15% {
+		transform: scale(0.25, min(calc(var(--bound) / -3.5), 3));
+	}
+	45% {
+		transform: scale(0.75, min(calc(var(--bound) / -2.5), 3));
+	}
+	to {
+		transform: scale(1.25, 1);
+	}
+}
+
+@keyframes pogo-spring-flicker {
+	from {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
 @namespace svg "http://www.w3.org/2000/svg";
 
 .point-actor,
@@ -7058,6 +7154,61 @@ animation: chalmers-run steps(5) infinite calc(calc(calc(0 - var(--animation-bia
 @keyframes spitfire-shoot {
 	0% { background-position-y: 0px; }
 	100% { background-position-y: -320px; }
+}
+
+.actor-item.actor-spring-turtle .sprite {
+	height: 32px;
+	width: 32px;
+}
+.actor-item.actor-spring-turtle .sprite:before {
+	content: '';
+	position: absolute;
+	top: -25px;
+	left: 0;
+	height: 32px;
+	width: 32px;
+	background-image: url(/custom/spring-turtle-spring.png);
+}
+
+.actor-item.actor-spring-turtle[data-spring=true] .sprite:before {
+	background-position-x: -32px;
+}
+
+.actor-item.actor-spring-turtle .sprite:after {
+	content: '';
+	position: absolute;
+	top: 0px;
+	left: 0;
+	--sprite-offset-x: 0px;
+	--sprite-offset-y: 0px;
+	background-image: url(/custom/spring-turtle.png);
+	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	height: 32px;
+	width: 32px;
+	z-index: 1;
+}
+
+.actor-item.actor-spring-turtle[data-animation="standing"] .sprite:after {
+	/*--sprite-offset-x: 0px;
+	--sprite-offset-y: 32px;*/
+}
+
+.actor-item.actor-spring-turtle[data-animation="walking"] .sprite:after {
+	--sprite-offset-x: 0px;
+	animation: spring-turtle-walk steps(2) infinite 280ms;
+}
+
+.actor-item.actor-spring-turtle[data-animation="walking"][data-direction="-1"] .sprite:after {
+	transform: scaleX(-1);
+}
+
+@keyframes spring-turtle-walk {
+	from{
+		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	}
+	to{
+		background-position: calc(-64px + var(--sprite-offset-x)) var(--sprite-offset-y);
+	}
 }
 
 .actor-item.actor-spring {
