--- a/app/actor/water-fall.css
+++ b/app/actor/water-fall.css
@@ -6,7 +6,7 @@
 	z-index: 100;
 }
 
-.actor-water-fall[data-upward] .sprite {
+.actor-water-fall[data-upward=true] .sprite {
 	position: relative;
 	animation: water-fall-animate steps(4) infinite 72ms reverse;
 	transform-origin: top center;
@@ -15,7 +15,7 @@
 		rotate(180deg) !important
 }
 
-.actor-water-fall[data-upward] .sprite:after {
+.actor-water-fall[data-upward=true] .sprite:after {
 	animation: water-fall-cap-animate steps(4) infinite 72ms reverse;
 	background-image: url(/Sonic/water-fall-cap.png);
 	position: absolute;
