--- a/app/effects/screen-effects.css
+++ b/app/effects/screen-effects.css
@@ -6,21 +6,25 @@
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	width: calc(100% / var(--scale));
+	/*width: calc(100% / var(--scale));*/
+	width: 100%;
 	height: calc(calc(300% / var(--scale)) + 0px);
 	transform-origin: top left;
-	transform: scale(var(--scale));
+	/*transform: scale(calc(1/var(--scale)));*/
 	backdrop-filter:  blur(0px);
 }
 
 .screen-effects .screen-fire {
 	position: absolute;
+	left: 0;
 	width: 100%;
 	height:  300%;
 	display: flex;
 	filter:  url(#waves);
 	opacity: 0.7;
-	transform: translateY(33.3%);
+	transform-origin: top left;
+	--scaleX: 1;
+	transform: translateY(33.3%) scaleX(var(--scaleX));
 }
 
 .screen-effects .screen-fire .fire-strip > div {
@@ -34,6 +38,11 @@
 
 .screen-effects .screen-fire.playing {
 	animation: screen-fire-slide 6s -0.5s linear 1;
+}
+
+[data-paused="-1"] .screen-effects .screen-fire.playing,
+[data-paused="0"] .screen-effects .screen-fire.playing {
+	animation-play-state: paused !important;
 }
 
 /*.screen-effects .screen-fire.playing .fire-strip:nth-child(8n) {
@@ -115,16 +124,16 @@
 
 	}
 	to {
-		transform: scale(1.1, 0.93);
+		transform: scale(1.1, 0.85);
 	}
 }
 
 @keyframes screen-fire-slide {
 	from {
-		transform: translateY(33.3%);
+		transform: translateY(33.3%)  scaleX(var(--scaleX));
 
 	}
 	to {
-		transform: translateY(-100%);
+		transform: translateY(-100%)  scaleX(var(--scaleX));
 	}
 }
