--- a/app/actor/stopper.css
+++ b/app/actor/stopper.css
@@ -1,3 +1,8 @@
+.actor-item.actor-stopper .sprite {
+	/*background-color: red;*/
+	/*background-image: var(--sprite-sheet) !important;*/
+}
+
 .actor-item.actor-stopper .fragmentsX {
 	position: absolute;
 	transition: transform var(--x-speed) ease-out , opacity var(--y-speed) ease-in;
