--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -567,10 +567,8 @@ input[type=number]::-webkit-outer-spin-button {
 .intro-cards {
 	position: absolute;
 	transform-origin: left top;
-	/*transform: scale(var(--scale));*/
-
-	width: calc(100%);
-	height: calc(100%);
+	width: 100%;
+	height: 100%;
 }
 
 .viewport-frame,
