--- a/app/network/burger.css
+++ b/app/network/burger.css
@@ -1,6 +1,6 @@
 .burger-button {
-	width: 1.5em;
-	height: 1.5em;
+	width: 1.2rem;
+	height: 1.2rem;
 	display: flex;
 	flex-shrink: 0;
 	flex-direction: column;
