--- a/app/network/lobby.css
+++ b/app/network/lobby.css
@@ -75,6 +75,30 @@
 	overflow: scroll;
 }
 
+.lobby .users .sort-buttons {
+	padding-left: 0.25rem;
+	padding-bottom: 0.125rem;
+	position: absolute;
+	bottom: 0;
+	z-index: 1;
+	background-color: white;
+}
+
+.lobby .users .sort-buttons button {
+	padding: 0;
+	width: 1rem;
+	height: 1rem;
+	border: none;
+}
+
+.lobby .users .sort-buttons button.sort-time {
+	background-image: url(/icons/clock.svg);
+}
+
+.lobby .users .sort-buttons button.sort-abc {
+	background-image: url(/icons/a-circle.svg);
+}
+
 .lobby .users {
 	min-width: 4em;
 	width: 7em;
@@ -126,6 +150,45 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
+}
+
+.lobby .topbar .title {
+	margin-left: 0.5rem;
+	font-size: 0.5rem;
+	font-family: '8-bit-pusab';
+}
+
+.lobby .users,
+.lobby {
+	font-family: monospace;
+	font-size: 0.6rem;
+}
+
+.lobby .messages .motd {
+	border-bottom: 1px solid black;
+	padding: 0.5em;
+	padding-right: 1.5em;
+	font-style: italic;
+	opacity: 0.665;
+	white-space: normal;
+	position: relative;
+}
+
+.lobby .messages .motd .close-button {
+	position: absolute;
+	top: 0.25em;
+	right: 0.25em;
+	width: 1em;
+	height: 1em;
+	background-image: url(/icons/x.svg);
+	border: none;
+	padding: 0;
+	background-color: transparent;
+}
+
+.lobby .messages .motd.closed {
+	display: none;
 }
 
 .lobby .topbar .button {
