--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -112,7 +112,7 @@
 
 .actor-item.actor-sonic[data-animation="startle"] .sprite:after {
 	--sprite-offset-x: -192px;
-	--sprite-offset-y: 256px;
+	--sprite-offset-y: -768px;
 
 	--animation-width: -64px;
 	--animation-steps: 3;
@@ -138,6 +138,19 @@
 	--sprite-offset-y: -64px;
 	--sprite-offset-x: -0px;
 	animation: sonic-walk steps(12) infinite 608ms forwards;
+}
+
+.actor-item.actor-sonic[data-animation="corkscrew"] .sprite:after {
+	--sprite-offset-y: -960px;
+	--sprite-offset-x: -0px;
+	animation: sonic-corkscrew steps(12) infinite 1s calc(-1s * var(--corkscrew)) forwards;
+	animation-play-state: paused;
+}
+
+.actor-item.actor-sonic[data-animation="flip"] .sprite:after {
+	--sprite-offset-y: -960px;
+	--sprite-offset-x: -0px;
+	animation: sonic-corkscrew steps(12) infinite 500ms forwards;
 }
 
 .actor-item.actor-sonic[data-animation="running"] .sprite:after,
@@ -549,6 +562,14 @@
 	z-index: -1 !important;
 }
 
+/*.actor-item.actor-sonic[data-animation] .sprite:after {
+	--sprite-offset-y: -1088px;
+	--sprite-offset-x: -0px;
+	--animation-width: -64px;
+	--animation-steps: 2;
+	animation: sonic-animate steps(var(--animation-steps)) infinite 800ms forwards;
+}*/
+
 .actor-item.actor-sonic[data-carrying=true][data-facing=right] .rear-arm {
 	transform: scale(-1,1);
 }
@@ -581,6 +602,15 @@
 }
 
 @keyframes sonic-walk {
+	from{
+		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	}
+	to{
+		background-position: calc(-768px + var(--sprite-offset-x)) var(--sprite-offset-y);
+	}
+}
+
+@keyframes sonic-corkscrew {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
