--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -644,3 +644,71 @@ input[type=number]::-webkit-outer-spin-button {
 .viewport-overlay .debug-spawn .point-actor .sprite{
 	transform: translate(-50%, -50%);
 }
+
+.combo-table > span {
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+.combo-table {
+	display: flex;
+	flex-direction: row-reverse;
+}
+
+.combo-table .combo-list > div:last-child {
+	flex: 0;
+	animation: combo-pulse 400ms 1 linear;
+	/*transform: scale(1.25) rotate(15deg);*/
+	z-index: 10000;
+}
+
+.combo-table .comboResult .hud-character-string {
+	animation: combo-pulse 400ms 1 linear;
+}
+
+.combo-table .comboFail .hud-character-string {
+	animation: combo-pulse 400ms 1 linear;
+}
+
+.combo-table .comboFail .hud-character {
+	/*transform: translate(0, calc(1px * var(--index)));*/
+	animation: combo-fail 400ms calc(800ms + calc(15ms * calc(var(--index) * var(--index)))) 1 ease-in forwards;
+	/*opacity: 0.125;*/
+}
+
+.combo-table div,
+.combo-table .combo-list > div {
+	display: flex;
+	justify-content: flex-start;
+	margin-bottom: 1.75px;
+}
+
+.combo-table .combo-list {
+	flex-direction: column-reverse;
+	display: flex;
+}
+
+@keyframes combo-pulse {
+	0% {
+		transform: scale(0.24) rotate(0);
+	}
+	18% {
+		transform: scale(0.12) rotate(0);
+	}
+	33% {
+		transform: scale(1.25) rotate(15deg);
+	}
+	100% {
+		transform: scale(1) rotate(0);
+	}
+}
+@keyframes combo-fail {
+	0% {
+		transform: translateY(0px);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(128px);
+		opacity: 0;
+	}
+}
