--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -655,11 +655,15 @@ input[type=number]::-webkit-outer-spin-button {
 	flex-direction: row-reverse;
 }
 
-.combo-table .combo-list > div:last-child {
+.combo-table .combo-list > div:last-child .hud-character-string {
 	flex: 0;
 	animation: combo-pulse 400ms 1 linear;
 	/*transform: scale(1.25) rotate(15deg);*/
 	z-index: 10000;
+}
+
+.combo-table .comboTopLine .hud-character-string {
+	animation: combo-pulse 400ms 1 linear;
 }
 
 .combo-table .comboResult .hud-character-string {
@@ -672,7 +676,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .combo-table .comboFail .hud-character {
 	/*transform: translate(0, calc(1px * var(--index)));*/
-	animation: combo-fail 400ms calc(800ms + calc(15ms * calc(var(--index) * var(--index)))) 1 ease-in forwards;
+	animation: combo-fail 750ms calc(1200ms + calc(15ms * calc(var(--index) * var(--index)))) 1 ease-in forwards;
+	filter: saturate(0) brightness(3);
+
 	/*opacity: 0.125;*/
 }
 
@@ -696,18 +702,28 @@ input[type=number]::-webkit-outer-spin-button {
 		transform: scale(0.12) rotate(0);
 	}
 	33% {
-		transform: scale(1.25) rotate(15deg);
+		transform: scale(1.25) rotate(calc(15deg * var(--pulseDir, 1)));
 	}
 	100% {
 		transform: scale(1) rotate(0);
 	}
 }
+
 @keyframes combo-fail {
 	0% {
+		filter: saturate(0) brightness(3);
+		transform: translateY(0px);
+		opacity: 1;
+	}
+	25% {
+		filter: saturate(1) brightness(1);
+	}
+	33% {
 		transform: translateY(0px);
 		opacity: 1;
 	}
 	100% {
+		filter: saturate(1) brightness(1);
 		transform: translateY(128px);
 		opacity: 0;
 	}
