--- a/app/backdrop/style.css
+++ b/app/backdrop/style.css
@@ -142,3 +142,10 @@
 	background-image: linear-gradient(0deg, #081230 40%, #222640 75%);
 	filter: hue-rotate(120deg) saturate(50%);
 }
+
+.backdrop.overcast {
+/*	background-image: linear-gradient(rgba(95, 60, 70, 1) 50%, rgba(90, 160, 200, 1), rgba(150, 125, 70, 1) 90%);*/
+/*	background-image: linear-gradient(0deg, #081230 40%, #222640 75%);*/
+	background-color: #240000;
+	filter: invert(1) hue-rotate(190deg) saturate(75%) brightness(45%) contrast(180%);
+}
